<resources>
    <string name="app_name">Wheel Size</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="width_hint">Width</string>
    <string name="tire_profile_hint">Profile</string>
    <string name="wheel_diameter_hint">Diameter (in.)</string>
    <string name="wheel_width_hint">Width (in.)</string>
    <string name="offset_hint">Offset</string>
    <string name="camber_hint">Camber</string>

    <string name="depth_hint">Depth(MM.)</string>
    <string name="height_hint">Height(MM.)</string>
    <string name="angle_hint">Angle(°)</string>

    <string name="current_spec">Current Spec</string>
    <string name="new_spec">New Spec</string>
    <string name="fender_spec">Fender Position</string>

    <string name="clear_text">Clear</string>
    <string name="submit_text">Submit</string>
    <string name="complete_form_prompt">All fields must be filled out.</string>
</resources>
