<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.CalculatorFragment">

    <ImageView
        android:id="@+id/spec_canvas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1.75"
        android:background="#acacac"
        />

    <GridLayout
        android:id="@+id/calc_gridview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:columnCount="2"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/gridview_padding"
        android:layout_weight="1">
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/width_et"
            android:hint="@string/width_hint"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/sidewall_et"
            android:layout_width="@dimen/edittexxt_width"
            android:layout_height="wrap_content"
            android:inputType="number"/>
        <EditText
            android:id="@+id/sidewall_et"
            android:hint="@string/tire_profile_hint"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/wheel_diameter_et"
            android:layout_width="@dimen/edittexxt_width"
            android:layout_height="wrap_content"
            android:inputType="number"/>
        <EditText
            android:id="@+id/wheel_diameter_et"
            android:hint="@string/wheel_diameter_hint"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/wheel_width_et"
            android:layout_width="@dimen/edittexxt_width"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>
        <EditText
            android:id="@+id/wheel_width_et"
            android:hint="@string/wheel_width_hint"
            android:imeOptions="actionNext"
            android:nextFocusForward="@+id/wheel_offset_et"
            android:layout_width="@dimen/edittexxt_width"
            android:layout_height="wrap_content"
            android:inputType="number|numberDecimal"/>
        <EditText
            android:id="@+id/wheel_offset_et"
            android:hint="@string/offset_hint"
            android:layout_width="@dimen/edittexxt_width"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"/>
    </GridLayout>
    <Button
        android:id="@+id/submit_button"
        android:text="@string/submit_text"
        android:layout_marginBottom="@dimen/submit_button_margin"
        android:layout_gravity="center_horizontal"
        android:layout_width="@dimen/edittexxt_width"
        android:layout_height="wrap_content"/>
</LinearLayout>